[package]
name = "newsletter-api-service"
authors = ["Julia Gracheva <isdolinskayaym@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]

name = "newsletter-api-service"

[dependencies]
actix-web = "4"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
"runtime-tokio-rustls", "macros",
"postgres",
"uuid",
"chrono",
"migrate"
]

[dev-dependencies]
reqwest = "0.12.15"
